Fixing bug 47733. Making document.implementation.createDocument() set up the root element in the document correctly so that it's parent and owner document is the document that it's in. r=heikki@netscape.com, sr=rpotts@netscape.com